Use separate header in angular part of the application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 </head>
 <body ng-app='sidekiq'>
 
-  <%= render 'layouts/header' %>
+  <%= render 'layouts/header' if controller.controller_name == 'static_pages' || devise_controller? %>
 
   <%= yield %>
 
