Update the help email

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -59,7 +59,7 @@
 
         <p>
           You can contact your stylist via your profile page.<br>
-          If you need any other assistance, send us an email to hello@sidekiq.com, or communicate through our Facebook page. We are very social!
+          If you need any other assistance, send us an email to hello@sidekiq.co, or communicate through our Facebook page. We are very social!
         </p>
       </div>
 
