Display stylist's email

--- a/app/assets/javascripts/templates/profile/partial/stylist.html
+++ b/app/assets/javascripts/templates/profile/partial/stylist.html
@@ -2,4 +2,4 @@
 
 <h3>{{ user.stylist.firstname }} {{ user.stylist.lastname }}</h3>
 <p>Your personal stylist</p>
-<p>{{ user.stylist.phone_number }}</p>
+<p class='text-muted'>{{ user.stylist.email }}</p>
