Update payment secure help paragraph

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -50,7 +50,8 @@
         <h3>6. Are payments secure?</h3>
 
         <p>
-          We use industry-standard SSL encryption with Stripe payment gateway. They are very secure.
+          Sidekiq is deployed using Heroku which provides a secure subdomain using https protocol.<br>
+          Also, all payments are handled by <a href="https://stripe.com">Stripe</a> and any sensitive information will not even touch our server.
         </p>
       </div>
 
