Add facebook convertion tracking pixel in the signup form

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -106,3 +106,11 @@
   from    { -webkit-transform:translateX(200%); }
   to      { -webkit-transform: translateX(0); }
 }
+
+#fb-pixel{
+  display:none;
+}
+
+.fb-conversion {
+  background-image: url('https://www.facebook.com/offsite_event.php?id=6024814275370&value=0.01&currency=AUD');
+}
