--- a/app/assets/javascripts/templates/signup_form/form.html
+++ b/app/assets/javascripts/templates/signup_form/form.html
@@ -1,3 +1,5 @@
+<div id="fb-pixel" ng-class="{'fb-conversion': registrationComplete}"></div>
+
 <div class="container">
   <div class="row">
     <div class="col-lg-10 col-lg-offset-1">
