--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,10 +15,11 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  @import 'bootstrap.min';
+
  @import 'colors';
  @import 'global';
 
  @import 'signup';
  @import 'profile';
  @import 'static_pages';
- @import 'animate.min'
+ @import 'animate.min';
