--- a/app/assets/javascripts/templates/signup_form/profile.html
+++ b/app/assets/javascripts/templates/signup_form/profile.html
@@ -1,5 +1,8 @@
 <div class="form-group row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-6 col-md-offset-3">
+
+    <h3>Let's set up your profile.</h3>
+
     <label for="email">Email</label>
     <input type="email" name='email' id='email' class='form-control' ng-model='formData.email'>
 
@@ -16,17 +19,10 @@
 
     <label for="lastname">Lastname</label>
     <input type="text" name='lastname' id='lastname' class='form-control' ng-model='formData.lastname'>
-  </div>
-</div>
 
-<div class="form-group row">
-  <div class="col-xs-3">
-    <a ui-sref='signup.kiqs' class='btn btn-block btn-default'>
-      <span class="glyphicon glyphicon-circle-arrow-left"></span> Prev Section
-    </a>
-  </div>
+    <div class="form-actions">
+      <button type='submit' class='btn btn-block btn-success'>Complete</button>
+    </div>
 
-  <div class="col-xs-3 col-xs-offset-6">
-    <button type='submit' class='btn btn-block btn-success'>Complete</button>
   </div>
 </div>
