--- a/app/assets/javascripts/templates/signup_form/styles.html
+++ b/app/assets/javascripts/templates/signup_form/styles.html
@@ -1,28 +1,32 @@
 <div class="form-group row">
-  <input type="checkbox" value='SmartStyle' id='SmartStyle' ng-model='formData.smart_style'>
-  <label for="SmartStyle">Smart style</label>
+  <div class="col-lg-6 col-lg-offset-3">
 
-  <input type="checkbox" value='CasualStyle' id='CasualStyle' ng-model='formData.casual_style'>
-  <label for="CasualStyle">Casual style</label>
+    <h3 class='text-center'>What styles do you prefer?</h3>
 
-  <input type="checkbox" value='HipsterStyle' id='HipsterStyle' ng-model='formData.hipster_style'>
-  <label for="HipsterStyle">Hipster style</label>
+    <div class="options">
+      <div class="option">
+        <input type="checkbox" value='SmartStyle' id='SmartStyle' ng-model='formData.smart_style'>
+        <label for="SmartStyle">Smart style</label>
+      </div>
 
-  <input type="checkbox" value='ClassicStyle' id='ClassicStyle' ng-model='formData.classic_style'>
-  <label for="ClassicStyle">Classic style</label>
-</div>
+      <div class="option">
+        <input type="checkbox" value='CasualStyle' id='CasualStyle' ng-model='formData.casual_style'>
+        <label for="CasualStyle">Casual style</label>
+      </div>
 
+      <div class="option">
+        <input type="checkbox" value='HipsterStyle' id='HipsterStyle' ng-model='formData.hipster_style'>
+        <label for="HipsterStyle">Hipster style</label>
+      </div>
 
-<div class="form-group row">
-  <div class="col-xs-3">
-    <a ui-sref='signup.needs' class='btn btn-block btn-default'>
-      <span class="glyphicon glyphicon-circle-arrow-left"></span> Prev Section
-    </a>
-  </div>
+      <div class="option">
+        <input type="checkbox" value='ClassicStyle' id='ClassicStyle' ng-model='formData.classic_style'>
+        <label for="ClassicStyle">Classic style</label>
+      </div>
+    </div>
 
-  <div class="col-xs-3 col-xs-offset-6">
-    <a ui-sref='signup.account' class='btn btn-block btn-info'>
-      Next Section <span class="glyphicon glyphicon-circle-arrow-right"></span>
+    <a ui-sref='signup.needs' class='btn btn-block btn-info'>
+      Continue <span class="glyphicon glyphicon-circle-arrow-right"></span>
     </a>
   </div>
 </div>
