--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -11,47 +11,6 @@
   }
 }
 
-/* numbered buttons */
-#status-buttons {
-  a {
-    color: $gray-font;
-    display: inline-block;
-    font-size: 12px;
-    margin-right: 50px;
-    margin-bottom: 50px;
-    min-width: 70px;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  a:hover {
-    text-decoration:none;
-  }
-
-  a.active {
-    text-decoration: none;
-
-    span {
-      background:#000;
-      color: #fff;
-    }
-  }
-
-  span {
-    background: #DDDDDD;
-    display:block;
-    height:30px;
-    margin:0 auto 10px;
-    padding-top:6.5px;
-    width:30px;
-    border-radius:50%;
-  }
-}
-
-
-
-
-
 
 /* style.css */
 /* ANIMATION STYLINGS
@@ -113,4 +72,51 @@
 
 .fb-conversion {
   background-image: url('https://www.facebook.com/offsite_event.php?id=6024814275370&value=0.01&currency=AUD');
+}
+
+.nav-breadcrumb {
+  text-align: center;
+  text-transform: uppercase;
+
+  li {
+    display: inline-block;
+
+    &.active {
+      a {
+        color: #000;
+      }
+    }
+
+    &:not(:last-child)::after {
+      font-family: FontAwesome;
+      content: "\f105";
+      margin: 0 20px;
+      color: $gray-blue;
+    }
+  }
+
+  a {
+    padding: 12px 0;
+    display: inline-block;
+    width: 120px;
+    color: $gray-blue;
+  }
+}
+
+#registration-steps {
+  border-bottom: 1px solid #e6e6e6;
+  background-color: #fff;
+
+  ul {
+    margin-bottom: 0;
+  }
+}
+
+.options {
+  margin-bottom: 50px;
+
+  .option {
+    text-align: center;
+    margin: 30px 0;
+  }
 }
