Fix the header link to point to signup/styles

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
 
         <li><%= link_to 'Login', new_user_session_path, target: '_self' %></li>
         <li><a href="/help">FAQs</a></li>
-        <li><a href="/signup/measurements">Get started</a></li>
+        <li><a href="/signup/styles">Get started</a></li>
 
       <% end %>
 
