--- a/app/assets/javascripts/templates/signup_form/profile.html
+++ b/app/assets/javascripts/templates/signup_form/profile.html
@@ -1,7 +1,7 @@
 <div class="form-group row">
   <div class="col-md-6 col-md-offset-3">
 
-    <h3>Let's set up your profile.</h3>
+    <h3 class='text-center'>Let's set up your profile.</h3>
 
     <label for="email">Email</label>
     <input type="email" name='email' id='email' class='form-control' ng-model='formData.email'>
