Fix the link to signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,7 +55,7 @@
 
         <br>
         <% unless user_signed_in? %>
-          <a href="/signup/measurements" class='btn btn-success btn-lg'>Get started for free</a>
+          <a href="/signup/styles" class='btn btn-success btn-lg'>Get started for free</a>
         <% end %>
 
       </div>
