--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,75 +1,67 @@
-<div class="container">
+<div id='faq' class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h1>FAQs</h1>
+    <div class="col-lg-10 col-lg-offset-1">
+      <h1>Frequently Asked Questions</h1>
       <hr>
 
-      <div>
-        <h3>1. What is Sidekiq?</h3>
+      <ol class='questions'>
+        <li class='question'>
+          <h3>How does Sidekiq work?</h3>
+          <p>
+            It works very simply. When you sign up, based on your profile, Sidekiq assigns you to a personal stylist of its own.<br>
+            You can specify your needs, styles, budget, and sizes at any time. Whenever you want, you can request a Kiq from the stylist by simply clicking a button!
+          </p>
+        </li>
 
-        <p>
-          Sidekiq makes you look good by sending you clothes when you need them, the way you like them, with no extra fees.
-        </p>
-      </div>
+        <li class='question'>
+          <h3>What is a Kiq?</h3>
+          <p>
+            A Kiq is a name for a package of clothing. You can reqeust and return one freely.
+          </p>
+        </li>
 
-      <div>
-        <h3>2. What is a Kiq?</h3>
+        <li class='question'>
+          <h3>How much is it?</h3>
+          <p>
+            You can specify your own budget. There is no minimum purchase. You don't pay for the stylist, and there is no monthly subscription fee. Just pay for what you keep!
+          </p>
+        </li>
 
-        <p>
-          A Kiq is a name for a package of clothing. You can reqeust and return one freely.
-        </p>
-      </div>
+        <li class='question'>
+          <h3>How often will I receive a Kiq?</h3>
+          <p>
+            Whenever you request a Kiq by clicking a button, your stylist will put together a Kiq according to your profile, and sent it to you. We are currently working on scheduling feature for Kiq so that you can receive it reguarly.
+          </p>
+        </li>
 
-      <div>
-        <h3>3. How does Sidekiq work?</h3>
+        <li class='question'>
+          <h3>What if I don't like the clothes?</h3>
+          <p>
+            When you don't like some items in your Kiq, you can simply put them back in the Kiq and return it to us.<br>
+            In short, you only pay for what you keep.
+          </p>
+        </li>
 
-        <p>
-          It works very simply. When you sign up, based on your profile, Sidekiq assigns you to a personal stylist of its own.<br>
-          You can specify your needs, styles, budget, and sizes at any time. Whenever you want, you can request a Kiq from the stylist by simply clicking a button!
-        </p>
-      </div>
+        <li class='question'>
+          <h3>Where do you ship to?</h3>
+          <p>
+            Currently, we serve the greater Sydney areas. We will expand the coverage very soon.
+          </p>
+        </li>
 
-      <div>
-        <h3>4. What if I don't like the clothes?</h3>
+        <li class='question'>
+          <h3>How can I contact Sidekiq?</h3>
+          <p>
+            You can contact your stylist via your profile page.<br>
+            If you need any other assistance, send us an email to <a href="mailto:hello@sidekiq.co">hello@sidekiq.co</a>, or communicate through our <a href="https://www.facebook.com/pages/Sidekiq/1567555646824870" target='_blank'>Facebook page</a>. We are very social!
+          </p>
+        </li>
+      </ol>
 
-        <p>
-          When you don't like some items in your Kiq, you can simply put them back in the Kiq and return it to us.<br>
-          In short, you only pay for what you keep.
-        </p>
-      </div>
 
-      <div>
-        <h3>5. Where do you ship to?</h3>
-
-        <p>
-          Currently, we serve the greater Sydney areas. We will expand the coverage very soon.
-        </p>
-      </div>
-
-      <div>
-        <h3>6. Are payments secure?</h3>
-
-        <p>
-          Sidekiq is deployed using Heroku which provides a secure subdomain using https protocol.<br>
-          Also, all payments are handled by <a href="https://stripe.com">Stripe</a> and any sensitive information will not even touch our server.
-        </p>
-      </div>
-
-      <div>
-        <h3>7. What if I have a question?</h3>
-
-        <p>
-          You can contact your stylist via your profile page.<br>
-          If you need any other assistance, send us an email to hello@sidekiq.co, or communicate through our Facebook page. We are very social!
-        </p>
-      </div>
-
-      <div>
-        <p>
-          Photo credit: <a target='_blank' href="http://www.flickr.com/photos/amirk/7666872808">Amir Kurbanov</a>
-        </p>
-      </div>
-
+      <p>
+        Photo credit: <a target='_blank' href="http://www.flickr.com/photos/amirk/7666872808">Amir Kurbanov</a>
+      </p>
 
     </div>
   </div>
