Display SSL certificate in credit card section

--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -44,6 +44,8 @@
     <div ng-if='!customer.exists'>
       None
     </div>
-
   </div>
+
+  <a class='ssl-cert' href='https://www.expeditedssl.com/simple-ssl-scanner/scan?target_domain=www.sidekiq.co' target='_blank'><img src='https://www.expeditedssl.com/ssl-secure-badge.png'  alt='Expedited SSL Scanner'></a>
+
 </div>
