--- a/app/views/stylists/dashboard.html.erb
+++ b/app/views/stylists/dashboard.html.erb
@@ -1,1 +1,25 @@
-<%= render @kiqs %>
+<div class="container">
+  <div class="row">
+    <aside class="col-md-3">
+      <img src="/stylists/<%= @stylist.id %>.jpg" class='stylist-avatar'>
+
+      <h3><%= @stylist.full_name %></h3>
+      <p class='text-muted'><%= @stylist.email %></p>
+
+    </aside>
+
+    <div class="col-md-9">
+
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h3>Requested Kiqs</h3>
+
+          <div>
+            <%= @kiqs.count %>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
