--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body ng-app='sidekiq'>
 
   <%= render 'layouts/header' if controller.controller_name == 'static_pages' || devise_controller? %>
-  <%= render 'layouts/stylist_header' if controller.controller_name == 'stylists' %>
+  <%= render 'layouts/stylist_header' if stylist_signed_in? %>
 
   <%= yield %>
 
