Generate Kiqs in seed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body ng-app='sidekiq'>
+<body>
 
   <%= render 'layouts/header' if controller.controller_name == 'static_pages' || devise_controller? %>
   <%= render 'layouts/stylist_header' if stylist_signed_in? %>
