--- a/app/views/stylists/pages/dashboard.html.erb
+++ b/app/views/stylists/pages/dashboard.html.erb
@@ -17,6 +17,8 @@
           <div>
             <%= @kiqs.count %>
           </div>
+
+          <%= link_to 'View', stylists_kiqs_path, class: 'btn btn-success' %>
         </div>
       </div>
 
