--- a/app/views/stylists/kiqs/index.html.erb
+++ b/app/views/stylists/kiqs/index.html.erb
@@ -7,8 +7,8 @@
       <ul class='nav'>
         <li><%= link_to 'All', stylists_kiqs_path %></li>
         <li><%= link_to 'Requested', stylists_kiqs_path(status: 'requested') %></li>
-        <li><%= link_to 'Pending', stylists_kiqs_path(status: 'pending') %></li>
-        <li><%= link_to 'Completed', stylists_kiqs_path(status: 'copmleted') %></li>
+        <li><%= link_to 'Sent', stylists_kiqs_path(status: 'pending') %></li>
+        <li><%= link_to 'Completed', stylists_kiqs_path(status: 'completed') %></li>
         <li><%= link_to 'Cancelled', stylists_kiqs_path(status: 'cancelled') %></li>
       </ul>
 
