--- a/app/views/stylists/kiqs/index.html.erb
+++ b/app/views/stylists/kiqs/index.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-12">
+      <%= render 'shared/flash' %>
+    </div>
+
     <h3>Kiqs</h3>
 
     <div class="col-md-3">
