--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="L145q9c83A2xIzbMBOZLISaD0-uvu3oIZTzYF-7m3Cw" />
   <title>Sidekiq</title>
   <base href="/">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
