Add show page for kiqs

--- a/app/views/stylists/kiqs/_kiq.html.erb
+++ b/app/views/stylists/kiqs/_kiq.html.erb
@@ -24,6 +24,8 @@
             <%= f.submit 'Sent', class: 'btn btn-sm btn-default' %>
           <% end %>
         <% end %>
+
+        <%= link_to 'View', stylists_kiq_path(kiq), class: 'btn btn-info' %>
       </td>
     </tr>
   </tbody>
