Add basic message function on user side

--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -4,6 +4,7 @@
       <div ng-include="'profile/partial/stylist.html'"></div>
 
       <a class='btn btn-success' ng-click='requestKiq()'>Request a Kiq</a>
+      <a class='btn btn-info' ui-sref='profile.messages'>Messages</a>
     </aside>
 
     <div class="col-md-9">
