--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="L145q9c83A2xIzbMBOZLISaD0-uvu3oIZTzYF-7m3Cw" />
-  <title>Sidekiq</title>
+  <title>Jumpkiq</title>
   <base href="/">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'https://js.stripe.com/v2/' %>
