--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to 'Jumpkiq', root_path, class: 'navbar-brand', target: '_self' %>
+    <%= link_to 'Sidekiq', root_path, class: 'navbar-brand', target: '_self' %>
   </div>
   <div class="navbar-collapse collapse navbar-inverse-collapse">
 
