--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="content cover text-center">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300">We Are Jumpkiq</h1>
+          <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300">We Are Sidekiq</h1>
           <a class="btn btn-success nav-external animated hiding page-scroll" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
           <h3 class="animated hiding" data-animation="fadeIn" data-delay="600">We make clothing easy for men.</h3>
         </div>
@@ -38,7 +38,7 @@
 
         <div class="col-lg-12">
           <p class='explanation'>
-            Only pay for what you keep. The stylist is free. No subscription fee.
+            Choose what you keep. No subscription fee.
           </p>
         </div>
       </div>
@@ -50,13 +50,17 @@
   <div class="container">
     <div class="content text-center">
       <div class="heading">
-        <h2>Just focus on other things you like.<br>
-        We will make you look good.</h2>
+        <h2>Just $49 + 5% of value</h2>
 
         <br>
         <% unless user_signed_in? %>
           <a href="/signup/styles" class='btn btn-success btn-lg'>Get started for free</a>
         <% end %>
+
+        <br>
+        <p class='explanation'>
+          Now anyone can afford a very personal stylist
+        </p>
 
       </div>
     </div>
