--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
 
         <div class="col-lg-12">
           <p class='explanation'>
-            Choose what you keep. No subscription fee.
+            Choose what you keep. No subscription fee. No shipping fee.
           </p>
         </div>
       </div>
@@ -59,7 +59,7 @@
 
         <br>
         <p class='explanation'>
-          Now anyone can afford a very personal stylist
+          Now anyone in Sydney can afford a very personal stylist
         </p>
 
       </div>
