--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -23,7 +23,14 @@
         <li class='question'>
           <h3>How much is it?</h3>
           <p>
-            You can specify your own budget. There is no minimum purchase. For each Kiq, you just pay $49 + 5% of the total value of that Kiq. You can freely choose what you keep and return the items you do not want.
+            You can specify your own budget. There is no minimum purchase. For each Kiq, your stylist cost $49 + 5% of the total value of that Kiq. You can freely choose what you keep and return the items you do not want.
+          </p>
+        </li>
+
+        <li class='question'>
+          <h3>When am I charged?</h3>
+          <p>
+            You will not be charged until you decide what you keep and finish any returns.
           </p>
         </li>
 
@@ -31,6 +38,13 @@
           <h3>How often will I receive a Kiq?</h3>
           <p>
             Whenever you request a Kiq by clicking a button, your stylist will put together a Kiq according to your profile, and sent it to you. We are currently working on scheduling feature for Kiq so that you can receive it reguarly.
+          </p>
+        </li>
+
+        <li class='question'>
+          <h3>Can I preview the Kiq?</h3>
+          <p>
+            We are building a built-in feature to preview your upcoming kiqs and directly give feedback to your stylist. It is coming soon. For now, please communicate with your stylist! We are very social.
           </p>
         </li>
 
