Implement conversation in user frontend

--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -4,6 +4,7 @@
       <div ng-include="'profile/partial/stylist.html'"></div>
 
       <a class='btn btn-success' ng-click='requestKiq()'>Request a Kiq</a>
+      <a ui-sref='profile.conversations' class='btn btn-default'>Conversations</a>
     </aside>
 
     <div class="col-md-9">
