--- a/app/assets/javascripts/templates/profile/partial/header.html
+++ b/app/assets/javascripts/templates/profile/partial/header.html
@@ -5,7 +5,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="/" target='_self' class='navbar-brand'>Sidekiq</a>
+    <a href="/" target='_self' class='navbar-brand'>Jumpkiq</a>
   </div>
   <div class="navbar-collapse collapse navbar-inverse-collapse">
 
