Move logics into different controllers

--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -2,7 +2,7 @@
   <span class="alert-message">{{ flash.message }}</span>
 </div>
 
-<div class="row">
+<div class="row" ng-controller='customersController'>
   <div class="col-md-6">
     <form stripe-form='handleStripe'>
 
