--- a/app/assets/javascripts/templates/profile/edit_shipping.html
+++ b/app/assets/javascripts/templates/profile/edit_shipping.html
@@ -2,7 +2,7 @@
   <span class="alert-message">{{ flash.message }}</span>
 </div>
 
-
+<div ng-controller='addressesController'>
   <div class="col-md-5">
     <form id='profile-form' class='row' ng-submit='processAddressForm()'>
 
@@ -40,3 +40,4 @@
       </div>
     </div>
   </div>
+</div>
