--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -3,7 +3,7 @@
     <aside class="col-md-3">
       <div ng-include="'profile/partial/stylist.html'"></div>
 
-      <a class='btn btn-success' ng-click='requestKiq()'>Request a Kiq</a>
+      <a class='btn btn-success' ng-controller='kiqsController' ng-click='requestKiq()'>Request a Kiq</a>
       <a ui-sref='profile.conversations' class='btn btn-default'>Conversations</a>
     </aside>
 
