--- a/app/assets/javascripts/templates/profile/orders.html
+++ b/app/assets/javascripts/templates/profile/orders.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller='kiqsController'>
   <div class="row">
     <div class="col-lg-12 item-container">
 
