--- a/app/views/stylists/pages/dashboard.html.erb
+++ b/app/views/stylists/pages/dashboard.html.erb
@@ -15,10 +15,22 @@
           <h3>Requested Kiqs</h3>
 
           <div>
-            <%= @kiqs.count %>
+            <h4><%= @kiq_count %></h4>
           </div>
 
           <%= link_to 'View', stylists_kiqs_path, class: 'btn btn-success' %>
+        </div>
+      </div>
+
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h3>Conversations</h3>
+
+          <div>
+            <h4><%= @conversation_count %></h4>
+          </div>
+
+          <%= link_to 'View', stylists_conversations_path, class: 'btn btn-success' %>
         </div>
       </div>
 
