--- a/app/assets/javascripts/templates/profile/orders.html
+++ b/app/assets/javascripts/templates/profile/orders.html
@@ -1,4 +1,5 @@
-<div class="container" ng-controller='kiqsController'>
+<span us-spinner ng-show='loading'></span>
+<div class="container" ng-hide='loading'>
   <div class="row">
     <div class="col-lg-12 item-container">
 
