Revert "Experiment: paid vs free stylist"
This reverts commit 9ae0b45f9e1a8e05324ba5b085fb0623783741b7.

Conflicts:
	app/views/static_pages/help.html.erb
	app/views/static_pages/home.html.erb

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
 
         <div class="col-lg-12">
           <p class='explanation'>
-            Choose what you keep. No subscription fee. No shipping fee.
+            Only pay for what you keep. The stylist is free. No subscription fee.
           </p>
         </div>
       </div>
@@ -50,7 +50,8 @@
   <div class="container">
     <div class="content text-center">
       <div class="heading">
-        <h2>Just $49 + 5% of value</h2>
+        <h2>Just focus on other things you like.<br>
+        We will make you look good.</h2>
 
         <br>
         <% unless user_signed_in? %>
