--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -23,7 +23,7 @@
         <li class='question'>
           <h3>How much is it?</h3>
           <p>
-            You can specify your own budget. There is no minimum purchase. For each Kiq, your stylist cost $49 + 5% of the total value of that Kiq. You can freely choose what you keep and return the items you do not want.
+            You can specify your own budget. There is no minimum purchase. You don't pay for the stylist, and there is no monthly subscription fee. Just pay for what you keep!
           </p>
         </li>
 
