Delete references to Sidekiq

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -6,9 +6,9 @@
 
       <ol class='questions'>
         <li class='question'>
-          <h3>How does Sidekiq work?</h3>
+          <h3>How does Jumpkiq work?</h3>
           <p>
-            It works very simply. When you sign up, based on your profile, Sidekiq assigns you to a personal stylist of its own.<br>
+            It works very simply. When you sign up, based on your profile, Jumpkiq assigns you to a personal stylist of its own.<br>
             You can specify your needs, styles, budget, and sizes at any time. Whenever you want, you can request a Kiq from the stylist by simply clicking a button!
           </p>
         </li>
@@ -64,10 +64,10 @@
         </li>
 
         <li class='question'>
-          <h3>How can I contact Sidekiq?</h3>
+          <h3>How can I contact Jumpkiq?</h3>
           <p>
             You can contact your stylist via your profile page.<br>
-            If you need any other assistance, send us an email to <a href="mailto:hello@sidekiq.co">hello@sidekiq.co</a>, or communicate through our <a href="https://www.facebook.com/pages/Sidekiq/1567555646824870" target='_blank'>Facebook page</a>. We are very social!
+            If you need any other assistance, send us an email to <a href="mailto:hello@jumpkiq.com">hello@jumpkiq.com</a>, or communicate through our <a href="https://www.facebook.com/pages/Jumpkiq/1567555646824870" target='_blank'>Facebook page</a>. We are very social!
           </p>
         </li>
       </ol>
