--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,7 +28,7 @@
         <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="600">
           <i class="fa fa-truck fa-5x"></i>
           <h3>Request a Kiq</h3>
-          <p>Request a sidekiq package! Your personal stylist will make sure to fulfill your needs and make you look great.</p>
+          <p>Request a jumpkiq package! Your personal stylist will make sure to fulfill your needs and make you look great.</p>
         </div>
         <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="900">
           <i class="fa fa-suitcase fa-5x"></i>
