Move ssl cert position

--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -47,6 +47,6 @@
     </div>
   </div>
 
-  <a href='https://www.expeditedssl.com/simple-ssl-scanner/scan?target_domain=www.jumpkiq.com' target='_blank'><img src='https://www.expeditedssl.com/ssl-secure-badge.png'  alt='Expedited SSL Scanner'></a>
+  <a class='ssl-cert' href='https://www.expeditedssl.com/simple-ssl-scanner/scan?target_domain=www.jumpkiq.com' target='_blank'><img src='https://www.expeditedssl.com/ssl-secure-badge.png'  alt='Expedited SSL Scanner'></a>
 
 </div>
