Update footer to Jumpkiq

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,7 +17,7 @@
           </li>
         </ul>
         <p class="copyright">
-          &copy; <%= Time.now.year %> Sidekiq
+          &copy; <%= Time.now.year %> Jumpkiq
         </p>
       </div>
     </div>
